--- a/src/usr_05.tex
+++ b/src/usr_05.tex
@@ -2,7 +2,7 @@
 Vim can be tuned to work like you want it to.  This chapter shows you how to
 make Vim start with options set to different values.  Add plugins to extend
 Vim's capabilities.  Or define your own macros.
-%\localtableofcontentswithrelativedepth{+1}
+\localtableofcontentswithrelativedepth{+1}
 \subsection{The vimrc file}
 \label{The vimrc file}
 \label{vimrc-intro}
