--- a/src/usr_09.tex
+++ b/src/usr_09.tex
@@ -2,7 +2,7 @@
 Vim works in an ordinary terminal.  GVim can do the same things and a few
 more.  The GUI offers menus, a toolbar, scrollbars and other items.  This
 chapter is about these extra things that the GUI offers.
-%\localtableofcontentswithrelativedepth{+1}
+\localtableofcontentswithrelativedepth{+1}
 \subsection{Parts of the GUI}
 
 You might have an icon on your desktop that starts gVim.
