--- a/src/usr_25.tex
+++ b/src/usr_25.tex
@@ -2,7 +2,7 @@
 Text hardly ever comes in one sentence per line.
 This chapter is about breaking sentences to make them fit on a page and other formatting.
 Vim also has useful features for editing single-line paragraphs and tables.
-%\localtableofcontentswithrelativedepth{+1}
+\localtableofcontentswithrelativedepth{+1}
 \subsection{Breaking lines}
 Vim has a number of functions that make dealing with text easier.
 By default, the editor does not perform automatic line breaks.
