--- a/src/usr_29.tex
+++ b/src/usr_29.tex
@@ -4,7 +4,7 @@ It's no surprise that Vim contains many features to aid in writing programs.
 Jump around to find where identifiers are defined and used.
 Preview declarations in a separate window.
 There is more in the next chapter.
-%\localtableofcontentswithrelativedepth{+1}
+\localtableofcontentswithrelativedepth{+1}
 \subsection{Using tags}
 \label{Using tags}
 What is a tag?  It is a location where an identifier is defined.
