--- a/src/usr_31.tex
+++ b/src/usr_31.tex
@@ -2,7 +2,7 @@
 Vim works well in a terminal, but the GUI has a few extra items.  A file
 browser can be used for commands that use a file.  A dialog to make a choice
 between alternatives.  Use keyboard shortcuts to access menu items quickly.
-%\localtableofcontentswithrelativedepth{+1}
+\localtableofcontentswithrelativedepth{+1}
 \subsection{The file browser}
 When using the File/Open... menu you get a file browser.
 This makes it easier to find the file you want to edit.
