--- a/src/usr_32.tex
+++ b/src/usr_32.tex
@@ -2,7 +2,7 @@
 Vim provides multi-level undo.
 If you undo a few changes and then make a new change you create a branch in the undo tree.
 This text is about moving through the branches.
-%\localtableofcontentswithrelativedepth{+1}
+\localtableofcontentswithrelativedepth{+1}
 \subsection{Undo up to a file write}
 Sometimes you make several changes, and then discover you want to go back to when you have last written the file.
 You can do that with this command:
