--- a/src/usr_43.tex
+++ b/src/usr_43.tex
@@ -2,7 +2,7 @@
 When you are editing a file of a certain type, for example a C program or a shell script, you often use the same option settings and mappings.
 You quickly get tired of manually setting these each time.
 This chapter explains how to do it automatically.
-%\localtableofcontentswithrelativedepth{+1}
+\localtableofcontentswithrelativedepth{+1}
 \subsection{Plugins for a filetype}            
 \label{filetype-plugin}
 How to start using filetype plugins has already been discussed here: \hyperref[add-filetype-plugin]{|\texttt{add-filetype-plugin}|}.
