--- a/src/usr_01.tex
+++ b/src/usr_01.tex
@@ -1,7 +1,7 @@
 \section{01. About the manuals}
 This chapter introduces the manuals available with Vim.
 Read this to know the conditions under which the commands are explained.
-%\localtableofcontentswithrelativedepth{+1}
+\localtableofcontentswithrelativedepth{+1}
 \subsection{Two manuals}
 
 The Vim documentation consists of two parts:
