--- a/src/usr_02.tex
+++ b/src/usr_02.tex
@@ -2,7 +2,7 @@
 This chapter provides just enough information to edit a file with Vim.  Not
 well or fast, but you can edit.  Take some time to practice with these
 commands, they form the base for what follows.
-%\localtableofcontentswithrelativedepth{+1}
+\localtableofcontentswithrelativedepth{+1}
 
 \subsection{Running Vim for the First Time}
 To start Vim, enter this command:
