--- a/src/usr_03.tex
+++ b/src/usr_03.tex
@@ -3,7 +3,7 @@ Before you can insert or delete text the cursor has to be moved to the right
 place.  Vim has a large number of commands to position the cursor.  This
 chapter shows you how to use the most important ones.  You can find a list of
 these commands below |\texttt{:h Q\_lr}|.
-%\localtableofcontentswithrelativedepth{+1} 
+\localtableofcontentswithrelativedepth{+1} 
 \subsection{Word movement}
 
 To move the cursor forward one word, use the "w" command.
