--- a/src/usr_11.tex
+++ b/src/usr_11.tex
@@ -3,7 +3,7 @@ Did your computer crash?  And you just spent hours editing?  Don't panic!  Vim
 stores enough information to be able to restore most of your work.  This
 chapter shows you how to get your work back and explains how the swap file is
 used.
-%\localtableofcontentswithrelativedepth{+1}
+\localtableofcontentswithrelativedepth{+1}
 \subsection{Basic recovery}
 In most cases recovering a file is quite simple, assuming you know which file you were editing (and the harddisk is still working).
 Start Vim on the file, with the "\texttt{-r}" argument added:
