--- a/src/usr_12.tex
+++ b/src/usr_12.tex
@@ -2,7 +2,7 @@
 By combining several commands you can make Vim do nearly everything.  In this
 chapter a number of useful combinations will be presented.  This uses the
 commands introduced in the previous chapters and a few more.
-%\localtableofcontentswithrelativedepth{+1}
+\localtableofcontentswithrelativedepth{+1}
 \subsection{Replace a word}
 The substitute command can be used to replace all occurrences of a word with another word:
 
