--- a/src/usr_22.tex
+++ b/src/usr_22.tex
@@ -3,7 +3,7 @@ Files can be found everywhere.  So how do you find them?  Vim offers various
 ways to browse the directory tree.  There are commands to jump to a file that
 is mentioned in another.  And Vim remembers which files have been edited
 before.
-%\localtableofcontentswithrelativedepth{+1}
+\localtableofcontentswithrelativedepth{+1}
 \subsection{The file browser}
 
 Vim has a plugin that makes it possible to edit a directory.  Try this:
