--- a/src/usr_24.tex
+++ b/src/usr_24.tex
@@ -3,7 +3,7 @@ When entering text, Vim offers various ways to reduce the number of keystrokes a
 Use Insert mode completion to repeat previously typed words.
 Abbreviate long words to short ones.
 Type characters that aren't on your keyboard.
-%\localtableofcontentswithrelativedepth{+1}
+\localtableofcontentswithrelativedepth{+1}
 \subsection{Making corrections}
 The <BS> key was already mentioned.
 It deletes the character just before the cursor.
